--- a/kc-users-management/package.json
+++ b/kc-users-management/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
+    "dev": "chmod +x ./env.sh && ./env.sh && cp ./env-config.js ./public/ && quasar dev",
     "build": "quasar build"
   },
   "dependencies": {
@@ -22,13 +22,13 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.13.14",
-    "eslint": "8.11.0",
-    "eslint-plugin-vue": "9.0.0",
+    "@babel/eslint-parser": "^7.13.14",
+    "eslint": "^8.11.0",
+    "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^4.0.0",
     "eslint-config-prettier": "^8.1.0",
-    "prettier": "2.5.1",
-    "@quasar/app-webpack": "3.9.2"
+    "prettier": "^2.5.1",
+    "@quasar/app-webpack": "^3.9.2"
   },
   "browserslist": [
     "last 10 Chrome versions",
