--- a/kc-users-management/package.json
+++ b/kc-users-management/package.json
@@ -17,6 +17,7 @@
     "vue-i18n": "^9.0.0",
     "@quasar/extras": "^1.16.4",
     "core-js": "^3.31.1",
+    "mitt": "^3.0.0",
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
