--- a/kc-users-management/package.json
+++ b/kc-users-management/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.5.0",
     "mitt": "^3.0.0",
     "quasar": "^2.8.0",
+    "underscore": "^1.13.6",
     "vue": "^3.4.18",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.12"
